# Band-Hackathon

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  app.py  pyproject.toml  run_demo.py
backend/agents/: __init__.py  adversarial_reviewer.py  intake.py  ledger.py  legal_commitment_guard.py  live_orchestrator.py  orchestrator.py  product_capability.py  reviewer_note.py  sales_engineer.py  security_compliance.py
backend/core/: __init__.py  audit.py  band_client.py  band_publisher.py  band_sdk_runtime.py  conflict.py  drift_control.py  embeddings.py  export.py  model_clients.py  orchestrator_store.py  policy_loader.py  provider_config.py  rag.py  rfp_ingest.py  rfp_parser.py  schemas.py  state_store.py
backend/scripts/: build_embedding_index.py  build_questionnaire.py  final_demo_check.py  probe_providers.py  run_band_collaboration.py  run_hardening_suite.py  verify_band_agents.py
backend/tests/: test_agents.py  test_band_collaboration.py  test_band_publisher.py  test_citation_gate.py  test_conflict.py  test_embeddings.py  test_exports.py  test_final_demo_check.py  test_hardening_suite.py  test_human_gate_route.py  test_live_orchestrator.py  test_model_clients.py  test_orchestrator.py  test_rfp_ingest.py
data/: CAIQv4.1.0-star_security_questionnaire-generated_at_2026_01_13.xlsx  CCMv4.1.0-generated_at_2026_01_13.xlsx  HECVAT416.xlsx  rfp_questions_v2.csv  sample_questionnaire.csv  uploaded_rfp.csv
docs/: DEMO_NARRATIVE.md
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json
(+37 files in other folders)
