[project]
name = "bandgate-backend"
version = "0.1.0"
description = "BandGate backend for the Band of Agents Hackathon"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]
band = [
  "band-sdk[langgraph]>=1.0.0",
  "langchain-openai>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
